fixed alignment of product list

--- a/src/css/ShopPage.module.css
+++ b/src/css/ShopPage.module.css
@@ -97,7 +97,7 @@
 .productList {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
 }
 
